# FullstackAPP

./: New Text Document.txt  README.md
paymenr/: README.md  pyproject.toml  secrect key
paymenr/app/: main.py
paymenr/app/config/: config.py  database.py  token.py
paymenr/app/models/: usermodels.py
paymenr/app/order/: orderrouter.py
